<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Starter">

    <Button
        android:id="@+id/trends_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/googleBlue"
        android:onClick="goToTrends"
        android:text="@string/trends"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@android:color/background_light"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/ip"
        app:layout_constraintEnd_toStartOf="@+id/search_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/trends_btn"
        app:layout_constraintEnd_toEndOf="@+id/trends_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/trends_btn"
        android:elevation="@android:dimen/thumbnail_height"
        app:srcCompat="@drawable/trend_arrow_foreground" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:elevation="@android:dimen/thumbnail_height"
        android:src="@drawable/arrow_right_foreground"
        app:layout_constraintBottom_toBottomOf="@+id/search_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trends_btn"
        app:layout_constraintTop_toTopOf="@+id/search_btn" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/googleGreen"
        android:drawableTint="@android:color/background_light"
        android:onClick="goToSearch"
        android:text="@string/search"
        android:textColor="@android:color/background_light"
        android:textSize="38sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/trends_btn"
        app:layout_constraintTop_toBottomOf="@+id/sub_title"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="145dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google2" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:fontFamily="casual"
        android:text="@string/addition"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/googleBlue"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/mostafa_ip"
        android:hint="@string/host_ip"
        android:inputType="textPostalAddress"
        android:text="@string/mostafa_ip"
        android:textAlignment="center"
        android:textColor="@color/googleRed"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>