<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/search_voice_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/googleBlue"
        android:drawableStart="@drawable/ic_mic_black_24dp"
        android:drawablePadding="16dp"
        android:drawableTint="@android:color/background_light"
        android:paddingStart="9dp"
        android:paddingEnd="9dp"
        android:scaleType="fitCenter"
        android:text="@string/search_by_voice"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/googleGreen"
        android:onClick="searchQuery"
        android:text="Search"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_et" />

    <AutoCompleteTextView
        android:id="@+id/query_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/edittextbackground"
        android:drawableStart="@drawable/search"
        android:drawablePadding="9dp"
        android:hint="@string/hint"
        android:paddingStart="12dp"
        android:completionThreshold="2"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="145dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google2" />

    <RadioGroup
        android:id="@+id/radiogp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_et">

        <RadioButton
            android:id="@+id/radioWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/googleRed"
            android:checked="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/radio_web_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioImgs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/googleRed"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/radio_imgs_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:fontFamily="casual"
        android:text="@string/addition"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/googleBlue"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:text="OR.."
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/googleBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/search_voice_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/CountryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="UK"
        android:textAllCaps="false"
        android:textColor="@color/googleGreen"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sub_title"
        app:layout_constraintTop_toTopOf="@+id/sub_title" />

    <TextView
        android:id="@+id/sound_result"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/search_by_voice"
        android:visibility="gone"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostafa_ip"
        android:textColor="@color/googleRed"
        android:textSize="12sp"
        android:hint="@string/host_ip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPostalAddress"
        android:autofillHints="@string/mostafa_ip" />
</androidx.constraintlayout.widget.ConstraintLayout>